fix overflow when "combined" emoji

--- a/src/components/App.style.scss
+++ b/src/components/App.style.scss
@@ -69,6 +69,8 @@
 			width: 0;
 			margin: 0 1.1em 0 -1.1em;
 			opacity: 0;
+			overflow: hidden;
+			vertical-align: bottom;
 		}
 
 		img.emoji {
